@@ -9,8 +9,10 @@ git (1:1.7.0.4-2~exp0) unstable; urgency=low
   * debian/git.NEWS.Debian: talk about the package name change, and the
     possible hazzle when upgrading with GNU Interactive Tools installed
     since etch and no git-core installed.
+  * debian/control, debian/rules: new package git-all: dummy package
+    which brings in all subpackages (following upstream's RPMs).
 
- -- Gerrit Pape <pape@smarden.org>  Sun, 21 Mar 2010 21:58:21 +0000
+ -- Gerrit Pape <pape@smarden.org>  Sun, 21 Mar 2010 22:12:01 +0000
 
 git-core (1:1.7.0.4-1) unstable; urgency=low
 
